# LangOps

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: .env.example
docs/: api-reference.md
docs/architecture/: directory-structure.md  jira-integration-design.md  quick-reference.md  system-design.md
docs/examples/: sample-alert-aliyun-ecs.json  sample-alert.json
docs/superpowers/plans/: 2026-06-25-langops-mvp-implementation.md  2026-06-26-prometheus-webhook-adapter.md
docs/superpowers/specs/: 2026-06-26-aliyun-cms-webhook-adapter-design.md  2026-06-26-prometheus-webhook-adapter-design.md
scripts/: init_knowledge.py
src/langops/: __init__.py  server.py
src/langops/adapters/: __init__.py  alertmanager.py  aliyun_cms.py
src/langops/agent/: __init__.py  alert_processor.py  nl_query_engine.py  predictive_engine.py  prompts.py  rca_engine.py
src/langops/collectors/: __init__.py  aliyun_cms_collector.py  base.py  prometheus_collector.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_e2e_webhook.py
tests/integration/: test_e2e.py  test_ui.py  test_webhook_alertmanager.py  test_webhook_aliyun_cms.py
tests/system/: conftest.py  test_alert_e2e_flow.py  test_alert_input_validation.py  test_collector_behavior.py  test_concurrent_dedup.py  test_dedup_fingerprint.py  test_error_response_format.py  test_payload_edge_cases.py  test_processor_exception.py  test_remediation_execute_flow.py
tests/unit/: test_project_scaffold.py  test_server.py  test_storage.py
(+80 files in other folders)
